[gd_scene load_steps=18 format=3 uid="uid://c5452vgsf2252"]

[ext_resource type="Script" uid="uid://comkrfs4y6cy7" path="res://Scenes/Pause_Menu/Scripts/pause_menu.gd" id="1_baq5o"]
[ext_resource type="Shader" uid="uid://crg7f51cmu7ya" path="res://Scenes/Pause_Menu/Scenes/pause_menu.gdshader" id="1_jdrio"]
[ext_resource type="FontFile" uid="uid://bchsii8yr4w2i" path="res://Assets/Fonts/Orbitron-VariableFont_wght.ttf" id="2_baq5o"]
[ext_resource type="PackedScene" uid="uid://dyts1phk1i2vb" path="res://Scenes/Main_Menu/Settings/Scenes/audio_slider_settings.tscn" id="4_lriwk"]
[ext_resource type="Theme" uid="uid://bots64gpinsv5" path="res://Scenes/Main_Menu/settings_theme.tres" id="4_odl1m"]
[ext_resource type="PackedScene" uid="uid://d3qmm8xbp8af5" path="res://Scenes/Main_Menu/Settings/Scenes/fov_slider.tscn" id="5_odl1m"]
[ext_resource type="PackedScene" uid="uid://dns8dt2y3a0e1" path="res://Scenes/Main_Menu/Settings/Scenes/window_mode_button.tscn" id="6_0n1ma"]
[ext_resource type="PackedScene" uid="uid://nlcidxpg1bts" path="res://Scenes/Main_Menu/Settings/Scenes/resolution_mode_button.tscn" id="7_1tj3k"]
[ext_resource type="PackedScene" uid="uid://ds6qw1e2bkw5y" path="res://Scenes/Main_Menu/Settings/Scenes/sensitivity_slider.tscn" id="8_7c0kc"]
[ext_resource type="PackedScene" uid="uid://dxl0yttual6o6" path="res://Scenes/Main_Menu/Settings/Scenes/graphics_quality.tscn" id="9_0n1ma"]
[ext_resource type="PackedScene" uid="uid://b2akjisdm5m8p" path="res://Scenes/Main_Menu/Settings/Scenes/hotkey_rebind_button.tscn" id="9_pd2we"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72xne"]
shader = ExtResource("1_jdrio")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_baq5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jdrio"]
resource_name = "pause_blur_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72xne"]
_data = {
&"RESET": SubResource("Animation_baq5o"),
&"pause_blur_animation": SubResource("Animation_jdrio")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u4rdq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tr3d6"]

[node name="pausemenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_baq5o")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_72xne")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 500.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_72xne")
}

[node name="SettingsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 250.0
offset_top = 125.0
offset_right = 1670.0
offset_bottom = 925.0
theme = ExtResource("4_odl1m")

[node name="TabContainer" type="TabContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
tab_alignment = 1
current_tab = 1

[node name="Audio" type="TabBar" parent="SettingsContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 44
theme_override_constants/margin_right = 44
theme_override_constants/margin_bottom = 44

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Audio/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 125

[node name="Audio_Slider_Settings" parent="SettingsContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_lriwk")]
layout_mode = 2

[node name="Audio_Slider_Settings2" parent="SettingsContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_lriwk")]
layout_mode = 2
bus_name = "Music"

[node name="Audio_Slider_Settings3" parent="SettingsContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_lriwk")]
layout_mode = 2
bus_name = "SFX"

[node name="Graphics" type="TabBar" parent="SettingsContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 44
theme_override_constants/margin_right = 44
theme_override_constants/margin_bottom = 44

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsContainer/TabContainer/Graphics/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Graphics/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 125

[node name="Fov_Slider" parent="SettingsContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_odl1m")]
layout_mode = 2

[node name="Window_Mode_Button" parent="SettingsContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("6_0n1ma")]
layout_mode = 2

[node name="Resolution_Mode_Button" parent="SettingsContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("7_1tj3k")]
layout_mode = 2

[node name="Graphics_quality" parent="SettingsContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_0n1ma")]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 8

[node name="Controls" type="TabBar" parent="SettingsContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 44
theme_override_constants/margin_right = 44
theme_override_constants/margin_bottom = 44

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsContainer/TabContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 125

[node name="HSeparator" type="HSeparator" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_u4rdq")

[node name="Sensitivity_slider" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("8_7c0kc")]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_u4rdq")

[node name="Hotkey_Rebind_Button" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Forward"

[node name="Hotkey_Rebind_Button2" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Backward"

[node name="Hotkey_Rebind_Button3" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Left"

[node name="Hotkey_Rebind_Button4" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Right"

[node name="Hotkey_Rebind_Button5" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Sprint"

[node name="Hotkey_Rebind_Button6" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Jump"

[node name="Hotkey_Rebind_Button7" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_pd2we")]
layout_mode = 2
action_name = "Interaction"

[node name="HSeparator2" type="HSeparator" parent="SettingsContainer/TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_tr3d6")

[node name="Options_Exit" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(300, 63)
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_baq5o")
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsContainer/Options_Exit" to="." method="_on_options_exit_pressed"]
